--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://4c.github.io/'
+baseURL = 'https://redanthrax.github.io/'
 languageCode = 'en-us'
-title = '4c.gg4c.gg4c.gg4c.gg'
+title = 'red code'
 theme = 'nightfall'
