--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,36 @@
-baseURL = 'https://redanthrax.github.io/'
-languageCode = 'en-us'
-title = 'red code'
-theme = 'nightfall'
+baseURL = "https://redanthrax.github.io/"
+languageCode = "en-us"
+title = "red code"
+theme = "nightfall"
+
+[params]
+user = "red"
+hostname = "redanthrax.github.io"
+readingTime = false
+sitedescription = "Coding for the 22nd century."
+footerHtml = "---"
+  [params.author]
+    name = "red"
+    email = "red@4c.gg"
+  [[params.social]]
+    key = 0
+    name = "github"
+    url = "https://github.com/redanthrax"
+    icon = "fa-brands fa-github"
+  [[params.social]]
+    key = 1
+    name = "twitter"
+    url = "https://twitter.com/redanthrax"
+    icon = "fa-brands fa-twitter"
+  [[params.social]]
+    key = 2
+    name = "email"
+    url = "mailto:red@4c.gg"
+    icon = "fa-solid fa-envelope"
+[menu]
+  [[menu.header]]
+    name = "posts"
+    url = "/posts"
+  [[menu.header]]
+    name = "projects"
+    url = "/projects"
